Created getSidebar API
