# backend/src/controllers/templates.controller.ts
@@ -1,4 +1,4 @@
-import { Get, Route } from "tsoa";
+import { Get, Route, Route } from "tsoa";
 
 type TemplateResponse = Template[];
 
@@ -41,6 +41,37 @@ const orderByFeatured = (data: any) => {
     }
   });
 };
+
+type SidebarResponse = SidebarElement[];
+
+interface SidebarElement {
+  id: string;
+  title: string;
+  description: string;
+  functions: Function[];
+}
+
+enum VariableType {
+  TextArea = "TextArea",
+  Input = "Input",
+  Boolean = "Boolean",
+  Array = "Array",
+  Dropdown = "Dropdown",
+  Object = "Object",
+}
+
+interface Function {
+  name: string;
+  macroName: string;
+  variables?: Variable[];
+}
+
+interface Variable {
+  label: string;
+  variableName: string;
+  value: string;
+  type: VariableType;
+}
 
 @Route("templates")
 export default class TemplateController {
@@ -250,5 +281,139 @@ export default class TemplateController {
     ] as TemplateResponse;
 
     return orderByFeatured(data);
+  }
+
+  @Get("/getSidebar")
+  public async getSidebar(): Promise<SidebarResponse> {
+    const data = [
+      {
+        title: "The ReadME Project",
+        description:
+          "The first and capstone project of the GitHub ReadME Project",
+        id: "1",
+        functions: [
+          {
+            name: "License",
+            macroName: "license",
+            variables: [
+              {
+                label: "License URL",
+                variableName: "licenseURL",
+                value: "https://choosealicense.com/licenses/mit/",
+                type: VariableType.Input,
+              },
+              {
+                label: "License Type",
+                variableName: "licenseType",
+                value: "MIT",
+                type: VariableType.Input,
+              },
+            ],
+          },
+        ],
+      },
+      {
+        title: "Project A",
+        description: "Description of Project A",
+        id: "2",
+        functions: [
+          {
+            name: "Feature A",
+            macroName: "featureA",
+            variables: [
+              {
+                label: "Variable A",
+                variableName: "variableA",
+                value: "Value A",
+                type: VariableType.Input,
+              },
+              {
+                label: "Variable B",
+                variableName: "variableB",
+                value: "Value B",
+                type: VariableType.Input,
+              },
+            ],
+          },
+        ],
+      },
+      {
+        title: "Project B",
+        description: "Description of Project B",
+        id: "3",
+        functions: [
+          {
+            name: "Feature B",
+            macroName: "featureB",
+            variables: [
+              {
+                label: "Variable C",
+                variableName: "variableC",
+                value: "Value C",
+                type: VariableType.Input,
+              },
+              {
+                label: "Variable D",
+                variableName: "variableD",
+                value: "Value D",
+                type: VariableType.Input,
+              },
+            ],
+          },
+        ],
+      },
+      {
+        title: "Project C",
+        description: "Description of Project C",
+        id: "4",
+        functions: [
+          {
+            name: "Feature C",
+            macroName: "featureC",
+            variables: [
+              {
+                label: "Variable E",
+                variableName: "variableE",
+                value: "Value E",
+                type: VariableType.Input,
+              },
+              {
+                label: "Variable F",
+                variableName: "variableF",
+                value: "Value F",
+                type: VariableType.Input,
+              },
+            ],
+          },
+        ],
+      },
+      {
+        title: "Project D",
+        description: "Description of Project D",
+        id: "5",
+        functions: [
+          {
+            name: "Feature D",
+            macroName: "featureD",
+            variables: [
+              {
+                label: "Variable G",
+                variableName: "variableG",
+                value: "Value G",
+                type: VariableType.Input,
+              },
+              {
+                label: "Variable H",
+                variableName: "variableH",
+                value: "Value H",
+                type: VariableType.Input,
+              },
+            ],
+          },
+        ],
+      },
+    ] as SidebarResponse;
+
+    return data;
   }
 }
